objects/SDO_ChannelPartner_Certification__c.object
<CustomObject>
    <description>What: Used for Channel Partners to indicate which certifications they have achieved.
Who: Sales Team</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Certifications</relationshipLabel>
        <relationshipName>Certifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Current_User__c</fullName>
        <description>Indicates that the certification is assigned to the community user that is currently logged in. Used to populate a list view.</description>
        <formula>Contact__r.Id  =  $User.ContactId</formula>
        <inlineHelpText>Indicates that the certification is assigned to the community user that is currently logged in. Used to populate a list view.</inlineHelpText>
        <label>Is Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Certification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>